2022-12-06T01:06:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3625463884 # 677
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 259 470 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 260 472 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-21] / []

2022-12-05T16:18:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3621914955 # 676
* notice: last 14d: unq all: 2 12
* notice: prev accum: outdated-unq outdated-all / unq all: 259 470 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 259 470 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-21]

2022-12-05T01:06:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3615967050 # 674
* notice: last 14d: unq all: 2 13
* notice: prev accum: outdated-unq outdated-all / unq all: 258 468 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 259 470 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-20] / []

2022-12-04T08:16:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3612393506 # 672
* notice: last 14d: unq all: 2 14
* notice: prev accum: outdated-unq outdated-all / unq all: 258 468 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 258 468 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-20]

2022-12-03T16:17:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3609285866 # 670