@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-06T01:06:55Z",
+  "timestamp" : "2022-12-06T08:17:41Z",
   "count_outdated" : 472,
   "uniques_outdated" : 260,
-  "count" : 483,
+  "count" : 482,
   "uniques" : 266,
   "clones" : [
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
